<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ProfileFragment"
    tools:ignore="ExtraText">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#03A9F4"
        android:padding="20dp">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="79dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/tutorsfemale" />


        <TextView
            android:id="@+id/fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="14dp"

            android:layout_marginTop="97dp"
            android:layout_toEndOf="@id/profile_image"
            android:fontFamily="arial"

            android:text="@string/sammy_snow"
            android:textStyle="bold"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtWeRTutors"
            android:layout_width="123dp"
            android:layout_height="32dp"
            android:layout_alignParentTop="true"

            android:layout_marginStart="45dp"
            android:layout_marginTop="40dp"

            android:layout_toEndOf="@id/profile_image"
            android:fontFamily="arial"

            android:text="@string/we_r_tutors"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/fullnameTutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fullname"

            android:layout_marginStart="22dp"
            android:layout_marginTop="28dp"
            android:layout_toEndOf="@id/profile_image"
            android:fontFamily="arial"
            android:includeFontPadding="false"
            android:text="@string/tutor"
            android:textStyle="bold"
            android:textSize="14sp" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="-100dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#03A9F4"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"

                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/todo1"
                    android:src="@drawable/billing" />

                <TextView
                    android:id="@+id/billingTv"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="41dp"
                    android:layout_marginEnd="0dp"
                    android:includeFontPadding="false"
                    android:text="@string/billing"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/billing_desc"
                    android:layout_width="95dp"
                    android:layout_height="42dp"
                    android:layout_below="@id/billingTv"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="77dp"
                    android:layout_marginEnd="27dp"
                    android:includeFontPadding="false"
                    android:text="@string/_400"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:layout_margin="10dp"

            app:cardElevation="10dp"
            app:cardBackgroundColor="#03A9F4"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"

                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/todo2"
                    android:src="@drawable/calender"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/bookingTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="47dp"
                    android:layout_marginEnd="40dp"
                    android:includeFontPadding="false"
                    android:text="@string/booking"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/booking_desc"
                    android:layout_width="62dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bookingTv"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="82dp"
                    android:layout_marginEnd="40dp"
                    android:includeFontPadding="false"
                    android:text="@string/__400"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:text="@string/name"
            android:textSize="15sp"
            android:textStyle="bold" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/edtName"
            android:drawableStart="@drawable/profile"

            android:hint="@string/enter_name"
            />

        <TextView
            android:layout_marginStart="200dp"
            android:layout_marginTop="-100dp"
            android:id="@+id/personalInfo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:text="@string/surname"
            android:textSize="15sp"
            android:textStyle="bold"

            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/edtSurname"
            android:layout_marginStart="180dp"
            android:drawableStart="@drawable/profile"
            android:hint="@string/entersurname"

            />

        <TextView
            android:id="@+id/txtInstitution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:text="@string/tetiary_institution_adress"
            android:textSize="15sp"
            android:textStyle="bold"

            />

        <EditText
            android:id="@+id/edtInstitution"
            android:layout_width="wrap_content"
            android:layout_height="48dp"

            android:layout_marginStart="180dp"
            android:drawableStart="@drawable/profile"
            android:hint="@string/enter_institution"

            />

        <TextView
            android:id="@+id/txtNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-105dp"
            android:layout_marginBottom="10dp"

            android:padding="10dp"
            android:text="@string/phonenumber"
            android:textSize="15sp"
            android:textStyle="bold"

            />

        <EditText
            android:id="@+id/edtNumber"

            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:drawableStart="@drawable/profile"
            android:hint="@string/enter_number" />




    </LinearLayout>
</LinearLayout>
